add gradient for work item

--- a/src/index.html
+++ b/src/index.html
@@ -632,7 +632,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/1.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
@@ -641,7 +641,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/2.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
@@ -650,7 +650,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/3.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
@@ -659,7 +659,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/1.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
@@ -668,7 +668,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/2.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
@@ -677,7 +677,7 @@
                   <div class="work-item works__slide-item">
                     <img class="work-item__img" src="assets/img/works/3.jpg" alt="" />
                     <div class="work-item__btns">
-                      <button class="btn work-item__btn">Оставить заявку</button>
+                      <button class="btn work-item__btn js-open-popup" data-popup-name="callback">Оставить заявку</button>
                       <button class="btn btn--border-white work-item__btn">Подробнее</button>
                     </div>
                   </div>
