fixed mobile menu links

--- a/src/product-card.html
+++ b/src/product-card.html
@@ -558,7 +558,7 @@
     <div class="mobile-menu__content">
       <ul class="mobile-menu__list">
         <li class="mobile-menu__item mobile-menu__item--has-children accordion">
-          <button class="link link--iflex link--lg link--bold mobile-menu__link accordion__btn">Каталог</button>
+          <button class="link link--iflex link--lg link--bold mobile-menu__link mobile-menu__link--static accordion__btn">Каталог</button>
           <div class="accordion__content">
             <div class="accordion__main">
               <div class="mobile-submenu mobile-menu__submenu">
