update mobile menu links

--- a/src/product-card.html
+++ b/src/product-card.html
@@ -568,13 +568,13 @@
                 </div>
                 <ul class="mobile-submenu__main">
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Входные двери</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Входные двери</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Межкомнатные двери</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Межкомнатные двери</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Раздвижные межкомнатные перегородки</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Раздвижные межкомнатные перегородки</a>
                   </li>
                 </ul>
               </div>
@@ -585,19 +585,19 @@
                 </div>
                 <ul class="mobile-submenu__main">
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Деревянные окна</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Деревянные окна</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Дерево-алюминиевые окна</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Дерево-алюминиевые окна</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Зимние сады</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Зимние сады</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Раздвижные системы</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Раздвижные системы</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Стоечно-ригельная система</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Стоечно-ригельная система</a>
                   </li>
                 </ul>
               </div>
@@ -608,10 +608,10 @@
                 </div>
                 <ul class="mobile-submenu__main">
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Паркет</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Паркет</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Террасная доска</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Террасная доска</a>
                   </li>
                   <li class="mobile-submenu__item"></li>
                 </ul>
@@ -623,16 +623,16 @@
                 </div>
                 <ul class="mobile-submenu__main">
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Кабинет</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Кабинет</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Гостинная</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Гостинная</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Спальня</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Спальня</a>
                   </li>
                   <li class="mobile-submenu__item">
-                    <a class="link link--sm mobile-submenu__link" href="#">Кухня</a>
+                    <a class="link link--sm mobile-submenu__link" href="catalog.html">Кухня</a>
                   </li>
                 </ul>
               </div>
