--- a/src/product-card.html
+++ b/src/product-card.html
@@ -14,6 +14,22 @@
     <div class="header__top">
       <div class="container">
         <div class="header__top-content">
+          <nav class="menu header__menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="link link--iflex link--sm menu__link" href="#">О компании</a>
+              </li>
+              <li class="menu__item">
+                <a class="link link--iflex link--sm menu__link" href="index.html#calculate">Калькулятор цен</a>
+              </li>
+              <li class="menu__item">
+                <a class="link link--iflex link--sm menu__link" href="blog.html">Блог</a>
+              </li>
+              <li class="menu__item">
+                <a class="link link--iflex link--sm menu__link" href="#footer">Контакты</a>
+              </li>
+            </ul>
+          </nav>
           <div class="text text--iflex text--sm text--dark-500 text--line header__address">
             <img class="text__icon" src="assets/img/icons/location.svg" alt="" />
             <span>пр. Мангилик ел 40, офис 14</span>
@@ -35,34 +51,32 @@
     <div class="header__bottom">
       <div class="container">
         <div class="header__bottom-content">
+          <button class="btn-catalog header__btn-catalog js-open-catalog-menu">
+            <span class="btn-catalog__lines"></span>
+          </button>
           <a href="index.html" class="logo header__logo">
             <img class="logo__img" src="assets/img/logo.png" alt="" />
           </a>
-          <nav class="menu header__menu">
-            <ul class="menu__list">
-              <li class="menu__item menu__item--has-children">
-                <button class="link link--iflex link--lg link--bold menu__link js-open-catalog-menu">Каталог</button>
-              </li>
-              <li class="menu__item">
-                <a class="link link--iflex link--lg link--bold menu__link" href="#">О компании</a>
-              </li>
-              <li class="menu__item">
-                <a class="link link--iflex link--lg link--bold menu__link" href="index.html#calculate">Калькулятор цен</a>
-              </li>
-              <li class="menu__item">
-                <a class="link link--iflex link--lg link--bold menu__link" href="#footer">Контакты</a>
-              </li>
-            </ul>
-            <button class="menu-toggle menu__toggle">
-              <span class="menu-toggle__lines"></span>
-            </button>
-          </nav>
+          <form class="search-form header__search" method="get" autocomplete="off">
+            <div class="search-form__field">
+              <button class="search-form__btn" type="submit">
+                <img src="assets/img/icons/search-gray-dark.svg" alt="" />
+              </button>
+              <input class="search-form__input" type="text" placeholder="Что хотите найти?" />
+              <button class="search-form__close" type="button">
+                <img src="assets/img/icons/exit-small-gray.svg" alt="" />
+              </button>
+            </div>
+          </form>
           <a class="link link--iflex link--lg link--bold header__phone" href="tel:87777764000">
             <img class="link__icon header__phone-icon" src="assets/img/icons/phone.svg" alt="" />
             <span>8 (777) 776 40 00</span>
           </a>
           <button class="btn btn--py-sm btn--px-xs btn--text-sm header__btn js-open-popup" data-popup-name="callback">
             Узнать стоимость
+          </button>
+          <button class="menu-toggle header__menu-toggle">
+            <span class="menu-toggle__lines"></span>
           </button>
         </div>
       </div>
@@ -75,8 +89,7 @@
               <div class="catalog-menu__lists">
                 <div class="submenu-list catalog-menu__list">
                   <div class="text text--iflex text--xl text--bold text--dark-700 submenu-list__title">
-                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon"
-                      src="assets/img/catalog-menu/1.svg" alt="" />
+                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon" src="assets/img/catalog-menu/1.svg" alt="" />
                     <span>Двери</span>
                   </div>
                   <ul class="submenu-list__main">
@@ -93,8 +106,7 @@
                 </div>
                 <div class="submenu-list catalog-menu__list">
                   <div class="text text--iflex text--xl text--bold text--dark-700 submenu-list__title">
-                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon"
-                      src="assets/img/catalog-menu/2.svg" alt="" />
+                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon" src="assets/img/catalog-menu/2.svg" alt="" />
                     <span>Окна</span>
                   </div>
                   <ul class="submenu-list__main">
@@ -117,8 +129,7 @@
                 </div>
                 <div class="submenu-list catalog-menu__list">
                   <div class="text text--iflex text--xl text--bold text--dark-700 submenu-list__title">
-                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon"
-                      src="assets/img/catalog-menu/3.svg" alt="" />
+                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon" src="assets/img/catalog-menu/3.svg" alt="" />
                     <span>Напольные покрытия</span>
                   </div>
                   <ul class="submenu-list__main">
@@ -132,8 +143,7 @@
                 </div>
                 <div class="submenu-list catalog-menu__list">
                   <div class="text text--iflex text--xl text--bold text--dark-700 submenu-list__title">
-                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon"
-                      src="assets/img/catalog-menu/4.svg" alt="" />
+                    <img class="text__icon text__icon--mx-sm submenu-list__title-icon" src="assets/img/catalog-menu/4.svg" alt="" />
                     <span>Столярные изделия</span>
                   </div>
                   <ul class="submenu-list__main">
@@ -161,13 +171,11 @@
                     <img src="assets/img/categories/4.jpg" alt="" />
                   </a>
                   <div class="category-card__info">
-                    <div
-                      class="title title--5 title--font-helvetica title--dark-650 category-card__title category-card__title--sm">
+                    <div class="title title--5 title--font-helvetica title--dark-650 category-card__title category-card__title--sm">
                       <a href="product-card.html">Древесные текстуры</a>
                     </div>
                     <div class="category-card__footer">
-                      <button class="btn btn--text-xs btn--py-sm btn--full category-card__btn js-open-popup"
-                        data-popup-name="callback">
+                      <button class="btn btn--text-xs btn--py-sm btn--full category-card__btn js-open-popup" data-popup-name="callback">
                         Рассчитать стоимость
                       </button>
                     </div>
@@ -178,13 +186,11 @@
                     <img src="assets/img/categories/5.jpg" alt="" />
                   </a>
                   <div class="category-card__info">
-                    <div
-                      class="title title--5 title--font-helvetica title--dark-650 category-card__title category-card__title--sm">
+                    <div class="title title--5 title--font-helvetica title--dark-650 category-card__title category-card__title--sm">
                       <a href="product-card.html">Древесные текстуры</a>
                     </div>
                     <div class="category-card__footer">
-                      <button class="btn btn--text-xs btn--py-sm btn--full category-card__btn js-open-popup"
-                        data-popup-name="callback">
+                      <button class="btn btn--text-xs btn--py-sm btn--full category-card__btn js-open-popup" data-popup-name="callback">
                         Рассчитать стоимость
                       </button>
                     </div>
