feat: added link to the blog in mobile menu

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -649,6 +649,9 @@
           <a class="link link--iflex link--lg link--bold mobile-menu__link" href="index.html#calculate">Калькулятор цен</a>
         </li>
         <li class="mobile-menu__item">
+          <a class="link link--iflex link--lg link--bold mobile-menu__link" href="blog.html">Блог</a>
+        </li>
+        <li class="mobile-menu__item">
           <a class="link link--iflex link--lg link--bold mobile-menu__link" href="#footer">Контакты</a>
         </li>
       </ul>
