--- a/src/index.html
+++ b/src/index.html
@@ -1283,6 +1283,9 @@
           <a class="link link--iflex link--lg link--bold mobile-menu__link" href="#calculate">Калькулятор цен</a>
         </li>
         <li class="mobile-menu__item">
+          <a class="link link--iflex link--lg link--bold mobile-menu__link" href="blog.html">Блог</a>
+        </li>
+        <li class="mobile-menu__item">
           <a class="link link--iflex link--lg link--bold mobile-menu__link" href="#footer">Контакты</a>
         </li>
       </ul>
